--- a/searx/templates/static/themes/simple/highlight.css
+++ b/searx/templates/static/themes/simple/highlight.css
@@ -66,7 +66,7 @@
     transition:
         all 0.25s,
         color 0.25s;
-    color: #fafafa !important;
+    color: var(--color-cust-default) !important;
     cursor: pointer !important;
     border: 1px solid transparent !important;
 }
@@ -117,7 +117,7 @@ a.link_on_top_about {
 
 .search_box {
     border-radius: 0 !important;
-    border: 1px solid #424242 !important;
+    border: 1px solid var(--color-cust-border) !important;
 }
 
 #links_on_top a svg {
